--- a/src/app/record-fetch/record-fetch.component.html
+++ b/src/app/record-fetch/record-fetch.component.html
@@ -1,28 +1,33 @@
-
-
-
 <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="form-group">
-          <label for="name">Search</label>
-          <input type="search" name="search" id="search" [(ngModel)]="searchString" class="form-control" (change)="Search()" />
-        </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="form-group">
+        <label for="name">Search</label>
+        <input
+          type="search"
+          name="search"
+          id="search"
+          [(ngModel)]="searchString"
+          class="form-control"
+          (change)="Search()"
+        />
       </div>
     </div>
-    <div class="row" *ngIf="users.length">
-      <div class="col-6 mt-3" *ngFor="let user of users  | slice:0:10">
-        <div class="card">
-          <div class="card-body">
-            <div class="row">
-              <div class="col-md">
-                <a (click)="UserProfile(user.url)" class="thumbnail" ><img [src]="user.avatar_url" class="img-fluid" alt="user-image"/></a>
-              </div>
-             
+  </div>
+  <div class="row" *ngIf="users.length">
+    <div class="col-6 mt-3" *ngFor="let user of users | slice: 0:10">
+      <div class="card">
+        <div class="card-body">
+          <div class="row">
+            <div class="col-md">
+              <a (click)="UserProfile(user.url)" class="thumbnail"
+                ><img [src]="user.avatar_url" class="img-fluid" alt="user-image"
+              /></a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
+S
