--- a/src/app/record-fetch/record-fetch.component.html
+++ b/src/app/record-fetch/record-fetch.component.html
@@ -1,33 +1,17 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="form-group">
-        <label for="name">Search</label>
-        <input
-          type="search"
-          name="search"
-          id="search"
-          [(ngModel)]="searchString"
-          class="form-control"
-          (change)="Search()"
-        />
-      </div>
-    </div>
-  </div>
-  <div class="row" *ngIf="users.length">
-    <div class="col-6 mt-3" *ngFor="let user of users | slice: 0:10">
+
+<div class="main">
+  <ul class="cards">
+    <li class="cards_item" *ngFor="let user of users | slice: 0:10">
       <div class="card">
-        <div class="card-body">
-          <div class="row">
-            <div class="col-md">
-              <a (click)="UserProfile(user.url)" class="thumbnail"
-                ><img [src]="user.avatar_url" class="img-fluid" alt="user-image"
-              /></a>
-            </div>
-          </div>
+        <div class="card_image"><img  (click)="UserProfile(user.url)" [src]="user.avatar_url"></div>
+        <div class="card_content">
+          <h2 class="card_title">{{user.url}}t</h2>
         </div>
       </div>
-    </div>
-  </div>
+    </li>   
+  </ul>
 </div>
-S
+
+
+
+
