--- a/src/app/record-fetch/record-fetch.component.html
+++ b/src/app/record-fetch/record-fetch.component.html
@@ -1,7 +1,7 @@
 
 <div class="main">
   <ul class="cards">
-    <li class="cards_item" *ngFor="let user of users | slice: 0:10">
+    <li class="cards_item" *ngFor="let user of users ">
       <div class="card">
         <div class="card_image"><img  (click)="UserProfile(user.url)" [src]="user.avatar_url"></div>
         <div class="card_content">
